Fix logos & left-align text

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -325,6 +325,17 @@ a:hover {
   }
   padding: 5px 0;
 }
+
+.ministry-logo {
+  @media screen and (max-width: 600px){
+    width: 200px;
+    height: 130px;
+  }
+  @media screen and (min-width: 601px){
+    width: 400px;
+    height: 260px;
+  }
+}
 #learn_more_button {
   position: relative;
   @media screen and (max-width: 600px) { bottom: 0; }
